# speedtest_aio

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile-grafana  Dockerfile-speedtest  Dockerfile-speedtest-RPi  README.md  crontab  docker-compose-RPi.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  speedtest_aio-cron
grafana/: dashboard.yml  datasource.yml  grafana_dashboard.json
speedtest_aio/: config.py  speedtest_aio.py
tests/: test_class_Config.py
