[tool.poetry]
name = "speedtest_aio"
version = "0.6.0"
description = "A Python script to capture speedtest JSON and insert it into a database."
authors = ["Aaron Melton <aaron@aaronmelton.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aaron-common-libs = {git = "https://github.com/aaronmelton/aaron-common-libs.git"}
speedtest-cli = "^2.1.3"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = "^24.4.2"
coverage = "^7.3.2"
flake8 = "^7.0.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.2"
pytest = "^8.2.0"
pytest-env = "^1.1.1"
toml = "^0.10.2"
Flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
# Ignoring subprocess complaints; Yes, I've counted the cost.
skips = ['B404', 'B603']
exclude_dirs = ["./tests/"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
        /(
          \.git
        | \.tox
        | \.venv
        | env/
        | _build
        | build
        | dist
        )/
    '''

[tool.flake8]
ignore = ['E501', 'W503']

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = '''google'''
inherit = false
match = '''(?!__init__).*\.py'''
match-dir = '''(?!tests)[^\.].*'''

[tool.pylint.master]
init-hook = 'import os, sys; sys.path.append(os.path.dirname("speedtest_aio/"));'

[tool.pylint.messages_control]
disable = '''
    line-too-long,
    singleton-comparison,
    too-many-lines,
    use-implicit-booleaness-not-comparison
    '''

[tool.pylint.miscellaneous]
notes = ''',
	TODO.md,
    '''

[tool.pytest.ini_options]
pythonpath = [".","speedtest_aio"]
env = ["LOG_LEVEL = DEBUG",
       "LOG_PATH = /tmp/"]
